# my-search-buddy

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG-APP-STORE-FIX.md  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SECURITY_AUDIT.md  TESTFLIGHT_DISTRIBUTION.md  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  licenses.yml  secrets.yml
ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
core/finder-core/include/: finder_core.h
core/finder-core/src/: ffi.rs  indexer.rs  scanner.rs  schema.rs
docs/: project_overview.md
finder-core/: Cargo.toml  cbindgen.toml
finder-core/include/: finder_core.h
finder-core/src/: extract_plain.rs  ffi.rs  indexer.rs  lib.rs  query.rs  scanner.rs
ios/: README.md
mac-app/: Package.swift  README_Xcode.md
mac-app/MySearchBuddy/: BookmarkStore.swift  ContentCoverageSettings.swift  ContentView.swift  IndexCoordinator.swift  IndexViewModel.swift  Info.plist  MySearchBuddyApp.swift  PurchaseManager.swift  QuickLookHelper.swift  ResultRow.swift  SearchViewModel.swift  SettingsView.swift
mac-app/MySearchBuddy.xcodeproj/: project.pbxproj
mac-app/Sources/MacApp/: MacApp.swift
macos/: .gitignore  MySearchBuddy.storekit  Package.swift
macos/MySearchBuddy/: AppDelegate.swift  ContentCoverageSettings.swift  ContentView.swift  Info.plist  MySearchBuddyApp.swift  ResultRow.swift  SearchViewModel.swift  SettingsView.swift  SubscriptionPaywallView.swift
macos/MySearchBuddy.xcodeproj/: project.pbxproj
macos/Sources/MacApp/: MacApp.swift
scripts/: build_finder_core_universal.sh
(+2 files in other folders)
