[package]
name = "finder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
ignore = "0.4"
rayon = "1"
tantivy = "0.22"
globset = "0.4"
aho-corasick = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
once_cell = "1"
num_cpus = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
